fix for white underline on mobile carousel

--- a/src/components/MobileEventsCard/MobileEventsCard.css
+++ b/src/components/MobileEventsCard/MobileEventsCard.css
@@ -8,8 +8,17 @@
     padding: 18px;
     text-align: center;
 }
-.mobile-events-card img{
-    width: 100%;
+.mobile-events-card {
+  display: flex;
+  flex-direction: column;
+ 
+  
+}
+.mobile-events-card img {
+  width: 100%;
+  vertical-align: top
+
+
 }
 .mobile-events-card .buttons{
     display: flex;
@@ -29,7 +38,7 @@
     border-radius: 15px;
 }
 .carousel-section .mobile-carousel{
-    margin-bottom: 80px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 500px) {
@@ -68,6 +77,14 @@
       height: 30px;
       width: 85px;
     }
+    .mobile-events-card img {
+      width: 100%;
+      height: 25vh;
+      transform: translateZ(0);
+      -webkit-transform: translateZ(0);
+    
+    
+    }
   }
   
 
@@ -76,6 +93,8 @@
       font-size: 18px;
       padding: 10px;
     }
+
+  
     
     
   }
